--- a/src/components/edithome/EditHome.css
+++ b/src/components/edithome/EditHome.css
@@ -1,23 +1,23 @@
 .edithome {
-	width: 100%;
-	align-items: center;
-	/* margin: 30px 0; */
+  width: 100%;
+  align-items: center;
+  /* margin: 30px 0; */
 }
 
 .edithomeWrapper {
-	justify-content: center;
-	align-items: center;
-	margin: 20px;
-	/* padding: 20px; */
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  /* padding: 20px; */
 }
 
-.editform { 
-	height: 30px;
+.editform {
+  height: 30px;
   width: 900px;
   background-color: bisque;
   border-radius: 20px;
   /* display: flex; */
-	margin-bottom: 20px;
+  margin-bottom: 20px;
   padding: 20px;
   flex-direction: column;
   justify-content: center;
@@ -25,7 +25,7 @@
 }
 
 .editinput {
-	height: 30px;
+  height: 30px;
   border-radius: 10px;
   border: 1px solid gray;
   font-size: 18px;
@@ -33,29 +33,59 @@
   cursor: pointer;
   padding-left: 20px;
   margin-bottom: 15px;
-	margin-left: 10px;
+  margin-left: 10px;
 }
 
 .addbutton {
-	height: 30px;
+  height: 30px;
   border-radius: 10px;
   border: none;
-  background-color: #D179A5;
+  background-color: #d179a5;
   color: white;
   font-size: 20px;
   font-weight: 500;
   cursor: pointer;
-	margin-left: 5px;
+  margin-left: 5px;
+}
+
+.addbutton:hover {
+  box-shadow: none;
+  transform: translateY(5px);
+  background-color: #26e057;
+}
+
+.createbutton {
+  height: 30px;
+  border-radius: 10px;
+  border: none;
+  background-color: #d179a5;
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+.createbutton:hover {
+  box-shadow: none;
+  transform: translateY(5px);
+  background-color: #26e057;
 }
 
 .showrecord {
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .subjectname {
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.timetext {
+  font-size: 20px;
+  padding: 10px;
+  font-weight: 900;
 }
