--- a/src/components/edithome/EditHome.css
+++ b/src/components/edithome/EditHome.css
@@ -5,15 +5,16 @@
 }
 
 .edithomeWrapper {
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   margin: 20px;
   /* padding: 20px; */
 }
 
 .editform {
   height: 30px;
-  width: 900px;
+  width: 100%;
   background-color: bisque;
   border-radius: 20px;
   /* display: flex; */
@@ -26,6 +27,7 @@
 
 .editinput {
   height: 30px;
+  width: 10vw; /* 幅を調整 */
   border-radius: 10px;
   border: 1px solid gray;
   font-size: 18px;
@@ -46,6 +48,7 @@
   font-weight: 500;
   cursor: pointer;
   margin-left: 5px;
+  margin-right: 20px;
 }
 
 .addbutton:hover {
@@ -88,4 +91,34 @@
   font-size: 20px;
   padding: 10px;
   font-weight: 900;
+}
+
+.loading {
+  font-size: 40px;
+  font-weight: 500;
+  color: hsl(198, 88%, 52%);
+}
+
+.imgWrapper {
+  padding-bottom: 30px;
+  position: relative;
+  height: 40vh;
+  width: 40vw;
+}
+
+.img {
+  height: 300px;
+  width: 300px;
+  border-radius: 30px;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.copywrite {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 14px;
+  color: #555;
 }
