--- a/src/components/showrecord/ShowRecord.css
+++ b/src/components/showrecord/ShowRecord.css
@@ -1,40 +1,59 @@
 .showrecord {
-	width: 100%;
+  width: 100%;
   box-shadow: 6px 7px 13px -11px #065489;
-	margin: 10px;
+  margin: 12px;
 }
 
 .showrecordWrapper {
-	height: 50px;
-	display: flex;
-	background-color: #FFFFED;
-	flex-direction: initial;
-	align-items: center;
-	/* justify-content: center; */
+  height: 50px;
+  display: flex;
+  background-color: #ffffed;
+  flex-direction: initial;
+  align-items: center;
+  /* justify-content: center; */
 }
 
 .subject {
-	align-items: center;
-	justify-content: center;
-	padding: 20px;
-	font-size: 20px;
-	font-weight: 300;
-	color: #A800ED;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  font-size: 20px;
+  font-weight: 300;
+  color: #a800ed;
 }
 
 .studytime {
-	font-size: 20px;
-	font-weight: 200;
+  font-size: 20px;
+  font-weight: 200;
 }
 
 .editbutton {
-	height: 30px;
+  height: 30px;
   border-radius: 10px;
   border: none;
-  background-color: #C5F2D9;
+  background-color: #c5f2d9;
   color: black;
   font-size: 20px;
   font-weight: 300;
   cursor: pointer;
-	margin-left: 40px;
+  margin-left: 40px;
+}
+
+.editbutton:hover {
+  box-shadow: none;
+  transform: translateY(5px);
+  background-color: #eeef0c;
+}
+
+.editinginput {
+  background-color: #f3fef4;
+  font-size: 20px;
+  color: #d01733;
+  border-radius: 10px;
+  padding-left: 10px;
+}
+
+.hourtext {
+  font-size: 20px;
+  padding-left: 5px;
 }
