--- a/src/components/studydate/StudyDate.css
+++ b/src/components/studydate/StudyDate.css
@@ -2,6 +2,7 @@
   display: block;
   width: 100%;
   box-shadow: 0px 3px 16px -5px #6a61ae;
+  background-color: #aaf2a6;
   border-radius: 10px;
   margin: 5px 0 20px 0;
   transition: all 0.3s;
@@ -19,4 +20,8 @@
   box-shadow: none;
   transform: translateY(5px);
   background-color: #84bfff;
+}
+
+.studydateText {
+  font-weight: 600;
 }
