--- a/src/components/topbar/Topbar.css
+++ b/src/components/topbar/Topbar.css
@@ -1,5 +1,5 @@
 .topbarContainer {
-  background-color: #E5D8BC;
+  background-color: #c2f7e8;
   height: 80px;
   width: 100%;
   display: flex;
@@ -12,9 +12,44 @@
 .topbarCenter {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   flex: 6;
   font-size: 25px;
   font-weight: bold;
   color: #000a00;
+}
+
+.createtodayrecord {
+  height: 30px;
+  border-radius: 10px;
+  border: none;
+  background-color: #d179a5;
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+  margin-right: 90px;
+}
+
+.createtodayrecord:hover {
+  box-shadow: none;
+  transform: translateY(5px);
+  background-color: #26e057;
+}
+
+.logout {
+  border-radius: 10px;
+  border: none;
+  background-color: #d179a5;
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+  margin-left: 10px;
+  margin-right: 20px;
+}
+.logout:hover {
+  box-shadow: none;
+  transform: translateY(5px);
+  background-color: #26e057;
 }
