--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,5 +1,17 @@
 .homeContainer {
   display: flex;
   width: 100%;
-  background-color: #fff7ff;
+  background-color: #eff2f7;
+  /* /* background-color: #fff7ff; */
+  /* background-color: #fff0ef; */
+}
+
+.sidebarContainer {
+  flex: 2;
+}
+
+.studyRecordContainer {
+  overflow-y: auto;
+  height: 100%;
+  flex: 11;
 }
