--- a/src/pages/register/Register.css
+++ b/src/pages/register/Register.css
@@ -56,6 +56,12 @@
   cursor: pointer;
   margin-top: 30px;
 }
+
+.LoginButton:hover {
+  box-shadow: none;
+  transform: translateY(5px);
+  background-color: #26c2c0;
+}
 .RegisterLoginButton {
   height: 40px;
   border-radius: 10px;
@@ -66,4 +72,16 @@
   font-weight: 50;
   cursor: pointer;
   margin-top: 10px;
+}
+
+.RegisterLoginButton:hover {
+  box-shadow: none;
+  transform: translateY(5px);
+  background-color: #e789ac;
+}
+
+.copywriteregister {
+  margin-top: 100px;
+  font-size: 14px;
+  color: #555;
 }
