ホーム画面を実装し、記録をつける日付をurl から参照できるようにした

--- a/src/components/studyrecord/StudyRecord.css
+++ b/src/components/studyrecord/StudyRecord.css
@@ -29,3 +29,12 @@
   align-items: center;
   justify-content: center;
 }
+
+.invaliddate {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: large;
+  font-weight: 900;
+  color: red;
+}
