--- a/src/components/showrecord/ShowRecord.css
+++ b/src/components/showrecord/ShowRecord.css
@@ -7,7 +7,7 @@
 .showrecordWrapper {
   height: 50px;
   display: flex;
-  background-color: #ffffed;
+  background-color: #2d445d;
   flex-direction: initial;
   align-items: center;
   /* justify-content: center; */
@@ -19,20 +19,21 @@
   padding: 20px;
   font-size: 20px;
   font-weight: 300;
-  color: #a800ed;
+  color: white;
 }
 
 .studytime {
   font-size: 20px;
   font-weight: 200;
+  color: white;
 }
 
 .editbutton {
   height: 30px;
   border-radius: 10px;
   border: none;
-  background-color: #c5f2d9;
-  color: black;
+  background-color: #7aaedd;
+  color: white;
   font-size: 20px;
   font-weight: 300;
   cursor: pointer;
@@ -56,4 +57,5 @@
 .hourtext {
   font-size: 20px;
   padding-left: 5px;
+  color: white;
 }
