--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,7 +1,7 @@
 .login {
   width: 100vw;
   height: 100vh;
-  background-color: #ffe9ea;
+  background-color: #2d445d;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -83,5 +83,5 @@
 .copywritelogin {
   margin-top: 50px;
   font-size: 14px;
-  color: #555;
+  color: white;
 }
