--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -7,6 +7,7 @@
   display: flex;
   padding-top: 150px;
   /* margin: 190px; */
+  /* justify-content: center; */
   flex-direction: column;
   background-color: #f4f0ff;
 }
@@ -28,10 +29,13 @@
 
 .calendar {
   transform: scale(2);
+  margin-right: 120px;
+  margin-left: 50px;
 }
 
 .confirm {
-  margin-left: 300px;
+  margin-left: px;
+  /* margin-left: 300px; */
 }
 
 .confirm-button {
